<resources>
    <string name="app_name">MadBeatsFrontend</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="electronic">Electronic</string>
    <string name="others">OTHERS</string>
    <string name="pop_rock">POP-ROCK</string>
    <string name="mainstream">MAINSTREAM</string>
    <string name="urban">URBAN</string>
    <string name="latin">LATIN</string>
    <string name="event">Event</string>
    <string name="date">Date</string>
    <string name="music_category">Music Category</string>
    <string name="spot">Spot</string>
    <string name="name_event">Name Event</string>
</resources>