<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FragmentBackground.MadBeats"
    tools:context=".fragment.MusicCategoriesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonElectronic"
            style="@style/Button.MadBeats"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/electronic"
            app:layout_constraintBottom_toTopOf="@+id/buttonUrban"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/buttonLatin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonLatin"
            style="@style/Button.MadBeats"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/latin"
            app:layout_constraintBottom_toTopOf="@+id/buttonMainstream"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonElectronic"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonUrban"
            style="@style/Button.MadBeats"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/urban"
            app:layout_constraintBottom_toTopOf="@+id/buttonPopRock"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/buttonMainstream"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonElectronic" />

        <Button
            android:id="@+id/buttonMainstream"
            style="@style/Button.MadBeats"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mainstream"
            app:layout_constraintBottom_toTopOf="@+id/buttonOthers"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonUrban"
            app:layout_constraintTop_toBottomOf="@id/buttonLatin" />

        <Button
            android:id="@+id/buttonPopRock"
            style="@style/Button.MadBeats"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/pop_rock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/buttonOthers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonUrban" />

        <Button
            android:id="@+id/buttonOthers"
            style="@style/Button.MadBeats"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/others"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonPopRock"
            app:layout_constraintTop_toBottomOf="@id/buttonMainstream" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
